Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/125_expected_2_given0_joker.xi
f()

g()
{
    x:int, _ = f()
}
//@PRACOWNIA
//@should_not_typecheck
